--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,12 @@
             "email": "mahabub.mollah@bjitgroup.com"
         }
     ],
-    "require": {}
+    "autoload": {
+        "psr-4": {
+            "BJIT\\": "src/"
+        }
+    },
+    "require": {
+        "php": ">=5.3.0"
+    }
 }
